# service-template-python

./: README.md
knowledge-service/: Makefile  local-compose.yml  pyproject.toml
knowledge-service/src/: main.py
knowledge-service/src/blog/: __init__.py  views.py
ner-service/: .gitignore  Dockerfile  Makefile  README.md  create_entities.py  create_word_count.py  local-compose.yaml  nltk_data_init.py  off_categories.tsv  pyproject.toml  requirements.md
ner-service/src/: config.py  main.py
ner-service/src/handler/: __init__.py  inputs_handler.py
ner-service/src/service/: __init__.py  entities.json  match_service.py
ner-service/src/service/entities/: aa.json  ar.json  bg.json  bn.json  ca.json  ch.json  cs.json  cy.json  cz.json  da.json  de.json  el.json  en.json  es.json  fa.json  fi.json  fr.json  ge.json  gl.json  he.json  hr.json  hu.json  is.json  it.json  ja.json  ka.json  ko.json  lt.json  mk.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  si.json  sk.json  sl.json  sq.json  sr.json  (+7 more)
ner-service/tests/: conftest.py  test_handler.py  test_rules.py
ner-service/tests/test_data/: word_counts.json
text-similarity-service/: README.md  app.py  docker-compose.yml  requirements.txt
