[tool.poetry]
name = "neo4j-demo"
version = "0.1.0"
description = "flask app using neo4j as database"
authors = ["lhe <liusha.8852@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
py2neo = "^2021.2.3"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
mypy = "^0.961"
black = "^22.6.0"
pytest-cov = "^3.0.0"
importanize = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
